<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="models.ExerciseDataActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/exercise_data"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/title_data">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exercise_text_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/nameField"
            android:textColor="@color/gray_200"
            android:textSize="20sp"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/line1">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exercise_text_set"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:textColor="@color/gray_200"

            android:textSize="20sp"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/line2">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exercise_text_repetition"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repetitions_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:textColor="@color/gray_200"

            android:textSize="20sp"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/line3">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exercise_text_weight"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:textColor="@color/gray_200"
            android:textSize="20sp"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true">


    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    </RelativeLayout>

