<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"

    tools:context="models.TimerActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
           />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="55dp"
        android:text="@string/exercise_timer"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView

        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/white"

        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/start_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        app:backgroundTint="@color/green_500"
        android:textAlignment="center"
        android:text="@string/start"
        android:textSize="20sp"
        android:textColor="@color/white"

        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/finish_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="130dp"
        app:backgroundTint="@color/red_200"
        android:textAlignment="center"
        android:text="@string/finish"
        android:textColor="@color/white"

        android:textSize="20sp"

        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="10dp"
        app:backgroundTint="@color/blue_500"
        android:textAlignment="center"
        android:text="@string/back"
        android:textColor="@color/white"

        android:textSize="20sp"

        />


</RelativeLayout>
